Use explicit test bootstrap credential in ONNX browser IT (#472, #477)